[package]
name = "maeve"
version = "0.1.0"
authors = ["dylan <contact@postmodern.technology>"]
readme = "README.md"
license = "MIT"
keywords = ["game"]
categories = ["command-line-interface"]
description = """
null
"""

[dependencies]
protobuf = "1.4.3"
rustyline = {version = "1.0.0", optional = true}

[dependencies.clap]
version = "2.29"
default-features = false
features = ["suggestions", "color", "yaml"]

[features]
default = []
pretty = ["rustyline"]
