[package]
name = "maeve"
version = "0.1.0"
authors = ["dylan <contact@postmodern.technology>"]
readme = "README.md"
license = "MIT"
keywords = ["game"]
categories = ["command-line-interface"]
description = """
null
"""
build = "build.rs"

[lib]
name = "maeve"
path = "src/lib.rs"

[[bin]]
name = "maeve"
path = "src/main.rs"

[dependencies]
bytes = "0.4.6"
prost = "0.3.0" 
prost-derive = "0.3.0" 
rustyline = {version = "1.0.0", optional = true}

[dependencies.clap]
version = "2.29"
default-features = false
features = ["suggestions", "color", "yaml"]

[build-dependencies]
glob = "0.2"

[features]
default = []
pretty = ["rustyline"]
