[package]
name = "maeve"
version = "0.1.0"
authors = ["dylan <contact@postmodern.technology>"]
readme = "README.md"
license = "MIT"
keywords = ["game"]
categories = ["command-line-interface"]
build = "build.rs"
description = """
null
"""


[dependencies]
bytes = "0.4.6"
lazy_static = "1.0"
prost = "0.3.0"
prost-derive = "0.3.0"
rustyline = {version = "1.0.0", optional = true}
notify = {version = "4.0.0", optional = true}
ctrlc = {version = "3.1.1", optional = true}
regex = "0.2"

[dependencies.clap]
version = "2.29"
default-features = false
features = ["suggestions", "color", "yaml"]

[build-dependencies]
glob = "0.2"
prost-build = "0.3.0"

[features]
default = ["pretty", "threaded"]
pretty = ["rustyline"]
stdout = []
threaded = ["notify", "ctrlc"]
